# digital-twin

./: .env.example  .gitignore  README.md  plan.json  pyproject.toml
docs/: ROADMAP.md
src/digital_twin/: __init__.py  config_diff.py  redaction.py
test-plans/: 01-cosmetic-notes-SAFE.json  02-dhcp-snooping-UNKNOWN.json  03-network-vlan-redefine-REVIEW.json  04-client-port-to-vlan2-REVIEW.json  05-sever-uplink-UNSAFE.json  06-delete-notes-dash-SAFE.json  07-stp-priority-REVIEW.json
tests/: factories.py  test_config_diff.py  test_plan3_flow.py  test_plan4_flow.py  test_public_api.py  test_redaction_leaf.py  test_smoke.py
tests/analysis/: test_context.py  test_cycles.py  test_delta_cause.py  test_delta_cause_loop_root.py  test_delta_cause_severance.py  test_delta_cause_vlan_cut.py  test_exits.py  test_ospf_reachability.py  test_vlan_reachability.py
tests/checks/: test_admin_disable.py  test_auth_access_change.py  test_base.py  test_bgp_adjacency.py  test_check_context_delta_index.py  test_client_impact.py  test_client_impact_caused_by.py  test_client_impact_enrichment.py  test_config_lint_helper.py  test_dhcp_path.py  test_gateway_gap.py  test_l1_param_mismatch.py  test_l2_blackhole.py  test_l2_blackhole_new_member_caused_by.py  test_l2_isolation.py  test_l2_loop.py  test_l2_vlan_segmentation.py  test_l2_vlan_segmentation_caused_by.py  test_mac_limit.py  test_mtu_mismatch.py  test_native_mismatch.py  test_ospf_withdrawal.py  test_poe_disconnect.py  test_registry.py  test_scope_lint.py  test_snooping.py  test_stp_edge.py  test_stp_root.py  test_subjects.py  test_subjects_caused_by.py  test_subnet_overlap.py  test_unmodeled_change.py  test_vlan_collision.py  test_wlan_client_impact.py  test_wlan_duplicate_ssid.py  test_wlan_open_guest.py
tests/contracts/: test_change_plan.py  test_config_diff_types.py  test_diagram.py  test_finding.py  test_finding_cause.py  (+1 more)
tools/: capture_replay.py  equivalence_gate.py  extract_oas.py  probe_fetch.py
(+325 files in other folders)
