[project]
name = "digital-twin"
version = "0.1.0"
description = "Network Digital Twin — pre-deployment configuration impact simulation"
requires-python = ">=3.14"
dependencies = [
    "jsonschema>=4.26.0",
    "mcp>=1.27.2",
    "mistapi>=0.62.0",
    "netaddr>=1.3.0",
    "networkx>=3.6.1",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.16",
    "types-jsonschema>=4.26.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not live'"
markers = [
    "live: requires MIST_HOST/MIST_APITOKEN env and network access",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
files = ["src/digital_twin"]
strict = true

[[tool.mypy.overrides]]
module = ["networkx.*", "netaddr.*", "mistapi.*", "yaml.*"]
ignore_missing_imports = true

[project.scripts]
digital-twin = "digital_twin.drivers.cli:script"
